# UI-Coursework-

./: CMakeLists.txt  Collated Evaluation Feedback.docx  PIS Information Sheet.odt  README.md  Sample Consent Form.odt  UI-groupwork.code-workspace  dataset.cpp  main.cpp  model.hpp  quake.cpp  quake.hpp  stats.hpp  window.cpp  window.hpp
Iteration-1/solution/: CMakeLists.txt  README.md  dataset.hpp  fchart.cpp  fchart.hpp  main.cpp~  model.cpp  model.hpp  overviewPage.cpp  pchart.cpp  pchart.hpp  stats.cpp  water.hpp  window.cpp  window.cpp~  window.hpp
brief/: COMP2811 Feedback Fruits Tasks Overview .md  COMP2811_CW3_Requirements.md  README.md  Sample Consent form_UKGDPR General v0.9.odt  Template PIS_GDPR UoL V0.5.odt
documentation/: report.md
solution/: CMakeLists.txt  dataset.cpp  dataset.cpp~  dataset.hpp  fchart.cpp  fchart.hpp  main.cpp  model.cpp  model.hpp  model.hpp~  overviewPage.cpp  overviewPage.hpp  overwiewPage.cpp  overwiewPage.hpp  pchart.cpp  pchart.hpp  stats.cpp  stats.cpp~  stats.hpp  water.cpp  water.cpp~  water.hpp  water.hpp~  window.cpp  window.hpp  window.hpp~
